[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Result .gd" type="Script" id=1]
[ext_resource path="res://Fonts/test_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/Popup.gd" type="Script" id=3]

[node name="Result " type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 10.0
margin_bottom = 10.0
script = ExtResource( 1 )

[node name="Rematch" type="Button" parent="."]
margin_left = 480.0
margin_top = 840.0
margin_right = 840.0
margin_bottom = 950.0
custom_fonts/font = ExtResource( 2 )
text = "Rematch"

[node name="Quit" type="Button" parent="."]
margin_left = 1000.0
margin_top = 850.0
margin_right = 1360.0
margin_bottom = 940.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"

[node name="Popup" type="Popup" parent="."]
margin_left = 550.0
margin_top = 160.0
margin_right = 1350.0
margin_bottom = 680.0
script = ExtResource( 3 )

[node name="Cancel" type="Button" parent="Popup"]
margin_left = 190.0
margin_top = 170.0
margin_right = 560.0
margin_bottom = 350.0
[connection signal="pressed" from="Rematch" to="." method="_on_Rematch_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Popup/Cancel" to="." method="_on_Cancel_pressed"]
